fix(accordionbox): add missing margin for group of components

--- a/packages/ui-shared/src/components/AccordionBox/AccordionBox.less
+++ b/packages/ui-shared/src/components/AccordionBox/AccordionBox.less
@@ -6,12 +6,10 @@
 
 @{b} {
     & + & {
-        @{accordion} {
-            border-top: none;
-        }
-    }
+        margin-top: 8px;
 
-    @{property}:first-child {
-        border-top: none;
+        @media @mobileBU {
+            margin-top: 12px;
+        }
     }
 }
